--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,14 @@
 {
   "name": "bayroumeter-api",
   "version": "1.0.0",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@azure/cosmos": "^4.1.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
