--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@azure/cosmos": "^4.1.1",
+    "applicationinsights": "^3.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
